--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,7 @@
 .Profile {
     /*background: #636e72;*/
-    grid-area: p;
+    /*grid-area: p;*/
     height: 100vh;
     width: 1200px;
+    grid-area: 2 / 2 / 3 / 3;
 }
