--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,6 +1,9 @@
 .Dialogs {
     display: grid;
-    /*grid-template-columns: 20rem 100%;*/
+    grid-template-columns: 30% 50%;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
 
 }
 .dialogsItems {
