--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -1,6 +1,12 @@
 .Users {
+    
+    .selectedPage {
+        font-weight: bold;
+    }
+    
     .Img {
         width: 60px;
         height: auto;
     }
+
 }
