--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -13,15 +13,15 @@
     width: 160px;
     height: 160px;
     border-radius: 50%;
-    position: absolute;
+    /* position: absolute;
     top: 240px;
-    left: 180px;
+    left: 180px; */
 }
 
 .userName {
-    color: #fff;
-    position: absolute;
+    color: #000;
+    /* position: absolute;
     top: 270px;
-    left: 350px;
+    left: 350px; */
     font-size: 23px;
 }
